--- a/src/components/header/dados-prontuarios/dados-prontuarios.css
+++ b/src/components/header/dados-prontuarios/dados-prontuarios.css
@@ -1,42 +1,83 @@
-.p-card{
-padding-top: 2%;
-padding-left: 1%;
-}
 
-.p-folder{
+.p-card {
+    padding-top: 2%;
+    padding-left: 1%;
+  }
+  
+  .p-folder {
     border-top: 30px solid transparent;
     border-left: 30px solid transparent;
     padding-top: 1%;
-    width: 175%;
-
-}
-.p-mid{
-    padding-top: 2%;
-    
-}
-
-.p-folder img{
-    width: 30%;
-}
-.p-mid h1{
-    text-align: center;
-    font-weight: bold;
-    font-size: 215%;
-    flex-grow: 1; 
-    text-decoration: underline;
-}
-.p-folder p{
-    font-size: 125%;
-    margin-left: 90px;
-    font-weight: bolder;
-}
-.b-folder .p-folder{
+    width: 65%;
     border-radius: 1rem;
     border: 5px solid;
     padding: 20px;
     margin: 20px;
     flex-direction: column;
     justify-content: center;
-    width: 10%;
-    height: 8%;
+  }
+  
+  
+  .p-folder img {
+    width: 30%;
+    height: auto;
+  }
+  
+.p-mid {
+  padding-top: 1%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 10%;
 }
+  
+  .p-midh1 {
+    margin-top: 2%;
+    margin-left: 0%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+    text-decoration: underline;
+  }
+  
+  .p-folder p {
+    font-size: 1.35rem;
+    margin-left: 0;
+    font-weight: bolder;
+    position: relative;
+    top: 0;
+    align-items: center;
+  }
+  
+  .p-cpf {
+    position: relative;
+    margin-top: 12px;
+  }
+  
+
+  .folder-left,
+  .folder-mid,
+  .folder-right {
+    margin-left: 13%;
+    width: 100%;
+    position: relative;
+  }
+  
+  .p-folder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+  }
+  
+  .p-cpf {
+    position: relative;
+    margin-top: 5px;
+  }
+  
+  .p-folder img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+  }
+
+  
