--- a/src/components/header/dados-prontuarios/dados-prontuarios.css
+++ b/src/components/header/dados-prontuarios/dados-prontuarios.css
@@ -26,8 +26,8 @@
 .p-mid {
   padding-top: 1%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 10%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1px;
 }
   
   .p-midh1 {
@@ -46,6 +46,7 @@
     position: relative;
     top: 0;
     align-items: center;
+    
   }
   
   .p-cpf {
@@ -57,7 +58,7 @@
   .folder-left,
   .folder-mid,
   .folder-right {
-    margin-left: 13%;
+    margin-left: 10%;
     width: 100%;
     position: relative;
   }
@@ -67,6 +68,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
+    cursor: pointer;
+    cursor: hand;
   }
   
   .p-cpf {
